css fixes to match the style of the admin ui and to get rid of extra spacing

--- a/access/src/main/external/static/css/admin/cdradmin.css
+++ b/access/src/main/external/static/css/admin/cdradmin.css
@@ -383,13 +383,6 @@ h1 {
 	border-bottom: 1px solid #DFEBF1;
 }
 
-/* Description editor */
-#xml_editor {
-	font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;
-	font-size: 14px;
-	background-color: #fff;
-}
-
 /* Invalid vocab */
 .vocab_results table {
 	width: 100%;
