--- a/access/src/main/external/static/css/cdr_admin.css
+++ b/access/src/main/external/static/css/cdr_admin.css
@@ -2562,13 +2562,6 @@ h1 {
 	border-bottom: 1px solid #DFEBF1;
 }
 
-/* Description editor */
-#xml_editor {
-	font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;
-	font-size: 14px;
-	background-color: #fff;
-}
-
 /* Invalid vocab */
 .vocab_results table {
 	width: 100%;
@@ -3514,7 +3507,62 @@ h1 {
 #edit_label_form label {
 	width: 135px;
 }
-/** Deposit Bin Collector */
+
+/** Edit Description */
+#xml_editor {
+	font-family: Trebuchet MS, Tahoma, Verdana, Arial, sans-serif;
+	font-size: 14px;
+	background-color: #fff;
+}
+
+.templating {
+	margin-left: 0;
+	font-size: 15px;
+}
+
+.template-form .ui-dialog-titlebar {
+	margin: 0;
+}
+
+.template-form.ui-dialog {
+	padding: 0;
+}
+
+.template-form .fa {
+	font-size: 37px;
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 5px;
+	vertical-align: top;
+}
+
+.template-form :focus {
+	outline: 0;
+}
+
+.template-form .ui-dialog-buttonpane {
+	margin: 0;
+}
+
+.ui-dialog.template-form .ui-button {
+	margin: 0px;
+	background: transparent linear-gradient(to bottom, rgb(114, 170, 195), rgb(62, 141, 176)) repeat scroll 0% 0%;
+	border: medium none #3E8DB0;
+	color: white;
+	padding: 4px 8px;
+	border-radius: 0;
+	margin-right: 6px;
+	font-size: 14px;
+}
+
+.template-form .ui-button-text-only .ui-button-text {
+	padding: 0;
+}
+
+.template-form .ui-dialog-title {
+	font-size: 18px;
+	margin: 0;
+}/** Deposit Bin Collector */
 
 #collector h2 {
 	color: #000;
